--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link
 			rel="preload"
-			href="%sveltekit.assets%/fonts/Courgette.woff2"
+			href="%sveltekit.assets%/fonts/Courgette-Regular.woff2"
 			as="font"
 			type="font/woff2"
 		/>
