--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 			href="%sveltekit.assets%/fonts/Courgette-Regular.woff2"
 			as="font"
 			type="font/woff2"
+			crossorigin="anonymous"
 		/>
 		<link rel="preload" href="%sveltekit.assets%/fonts/fonts.css" as="style" />
 		<link rel="stylesheet" href="%sveltekit.assets%/fonts/fonts.css" />
