--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,20 @@
 			type="font/woff2"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/Inter/Inter-Regular.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/Inter/Inter-Bold.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
+		/>
 		<link rel="preload" href="%sveltekit.assets%/fonts/fonts.css" as="style" />
 		<link rel="stylesheet" href="%sveltekit.assets%/fonts/fonts.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
