--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
 		/>
 		<link rel="preload" href="%sveltekit.assets%/fonts/fonts.css" as="style" />
 		<link rel="stylesheet" href="%sveltekit.assets%/fonts/fonts.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-prefetch>
